--- a/index.html
+++ b/index.html
@@ -1,42 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe-HW</title>
-    <link rel="stylesheet" href="style.css">
+	<title>HW-Easy version</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
+<div class="container">
+	<header>header</header>
+	<nav>navigation</nav>
+	<!-- <div> -->
+	<section >section
+	<article>article
+	    <h1 id="content">h1 h2 h3</h1>
+	    <p id="content">p</p>
+	</article>
+	</section>
+	<aside>aside</aside>
+	<!-- </div> -->
+	<footer>footer</footer>
+ </div>
+</body> 
 
-    <header class="header">
-        <p>header</p>
-    </header>
-
-    <nav>
-        <p>nav</p>
-    </nav>
-
-    <div class="section">
-        <p>section</p>
-        <div class="article">
-            <p>article</p>
-            <div class="h1">
-                <h2>h1, h2, h3</h2>
-            </div>
-            <div class="p">
-                <p>p</p>
-            </div>
-        </div> 
-    </div>
-
-    <div class="aside">
-        <p>aside</p>
-    </div>
-
-    <div class="footer">
-        <p>footer</p>
-    </div>
-</body>
 </html>
+	
